User login endpoint, documentation and unit tests
