# src/routes/user.routes.ts
@@ -2,11 +2,13 @@ import { Router } from 'express';
 import {
   eligibilityRegister,
   kycRegister,
+  login,
   verifyEmail,
 } from '../controllers/user.controller';
 import {
   eligibilityRegisterValidation,
   kycRegisterValidation,
+  loginValidation,
   verifyEmailValidation,
 } from '../validations/user.validation';
 
@@ -20,5 +22,6 @@ router.post(
 
 router.post('/kyc-register', kycRegisterValidation, kycRegister);
 router.post('/verify-email', verifyEmailValidation, verifyEmail);
+router.post('/login', loginValidation, login);
 
 export default router;
